--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,9 @@
 version: 2.1
+
 orbs:
-  sonarcloud: sonarsource/sonarcloud@1.0.0
-jobs:
-  build:
-    docker:
-      - image: circleci/node:10.16.3
-    steps:
-    - checkout
-    - sonarcloud/scan
+  maven: circleci/maven@0.0.12
+
 workflows:
-  my-workflow:
+  maven_test:
     jobs:
-      - build:
-          context: sonarcloud
+      - maven/test # checkout, build, test, and upload test results
