--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=123456789ab
 sonar.organization=vsawanny
 sonar.projectName=java-maven
 sonar.sources=. \
+sonar.url=https://sonarcloud.io/
