--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,31 @@
 version: 2.1
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.0.0
+  maven: circleci/maven@0.0.12
+
 jobs:
   build:
     docker:
       - image: circleci/node:10.16.3
+
+    steps:
+      
+    - checkout
+    - run: mvm package
+  sonarqube:
+    docker:
+      - image: circleci/node:8.10
+
     steps:
     - checkout
     - sonarcloud/scan
+
 workflows:
   my-workflow:
     jobs:
       - build:
+         context: sonarcloud
+      - sonarqube:
+          requires:
+            - build
           context: sonarcloud
